--- a/KatiKatiClick/KatiKatiClick.vcxproj
+++ b/KatiKatiClick/KatiKatiClick.vcxproj
@@ -174,6 +174,7 @@
     <ClCompile Include="ObjectFile\UIFile\UIGoal.cpp" />
     <ClCompile Include="ObjectFile\EnemyFile\SplitEnemy.cpp" />
     <ClCompile Include="SceneFile\EndScene.cpp" />
+    <ClCompile Include="SceneFile\ResultScene.cpp" />
     <ClCompile Include="SceneFile\TitleScene.cpp" />
     <ClCompile Include="UtilityFile\MouseInput.cpp" />
     <ClCompile Include="ObjectFile\SkillFile\BAttackSkill.cpp" />
@@ -209,6 +210,7 @@
     <ClInclude Include="ObjectFile\UIFile\UIGoal.h" />
     <ClInclude Include="ObjectFile\EnemyFile\SplitEnemy.h" />
     <ClInclude Include="SceneFile\EndScene.h" />
+    <ClInclude Include="SceneFile\ResultScene.h" />
     <ClInclude Include="SceneFile\TitleScene.h" />
     <ClInclude Include="UtilityFile\Define.h" />
     <ClInclude Include="ObjectFile\EnemyFile\EnemyArray.h" />
