--- a/KatiKatiClick/KatiKatiClick.vcxproj.filters
+++ b/KatiKatiClick/KatiKatiClick.vcxproj.filters
@@ -65,6 +65,7 @@
     <ClCompile Include="ObjectFile\PauseFile\PauseButtonFile\PauseButton.cpp" />
     <ClCompile Include="ObjectFile\PauseFile\ArrowButtonFile\ArrowButton.cpp" />
     <ClCompile Include="ObjectFile\GoalFile\Barrier.cpp" />
+    <ClCompile Include="SceneFile\ResultScene.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="UtilityFile\Define.h" />
@@ -134,6 +135,7 @@
     <ClInclude Include="ObjectFile\PauseFile\PauseButtonFile\PauseButton.h" />
     <ClInclude Include="ObjectFile\PauseFile\ArrowButtonFile\ArrowButton.h" />
     <ClInclude Include="ObjectFile\GoalFile\Barrier.h" />
+    <ClInclude Include="SceneFile\ResultScene.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="ソースファイル">
