--- a/KatiKatiClick/KatiKatiClick.vcxproj.filters
+++ b/KatiKatiClick/KatiKatiClick.vcxproj.filters
@@ -65,6 +65,7 @@
     <ClCompile Include="ObjectFile\PauseFile\PauseButtonFile\PauseButton.cpp" />
     <ClCompile Include="ObjectFile\PauseFile\ArrowButtonFile\ArrowButton.cpp" />
     <ClCompile Include="ObjectFile\GoalFile\Barrier.cpp" />
+    <ClCompile Include="ObjectFile\GoalFile\DamageEffect.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="UtilityFile\Define.h" />
@@ -134,6 +135,7 @@
     <ClInclude Include="ObjectFile\PauseFile\PauseButtonFile\PauseButton.h" />
     <ClInclude Include="ObjectFile\PauseFile\ArrowButtonFile\ArrowButton.h" />
     <ClInclude Include="ObjectFile\GoalFile\Barrier.h" />
+    <ClInclude Include="ObjectFile\GoalFile\DamageEffect.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="ソースファイル">
@@ -193,5 +195,8 @@
   </ItemGroup>
   <ItemGroup>
     <Text Include="Log.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="IconFile\Icon.rc" />
   </ItemGroup>
 </Project>
