--- a/KatiKatiClick/KatiKatiClick.vcxproj.filters
+++ b/KatiKatiClick/KatiKatiClick.vcxproj.filters
@@ -68,6 +68,7 @@
     <ClCompile Include="ObjectFile\PauseFile\ArrowButtonFile\RightButton.cpp" />
     <ClCompile Include="ObjectFile\PauseFile\TitleButtonFile\TitleButton.cpp" />
     <ClCompile Include="ObjectFile\PauseFile\YesButtonFile\YesButton.cpp" />
+    <ClCompile Include="SceneFile\ResultScene.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="UtilityFile\Define.h" />
@@ -140,6 +141,7 @@
     <ClInclude Include="ObjectFile\PauseFile\ArrowButtonFile\RightButton.h" />
     <ClInclude Include="ObjectFile\PauseFile\TitleButtonFile\TitleButton.h" />
     <ClInclude Include="ObjectFile\PauseFile\YesButtonFile\YesButton.h" />
+    <ClInclude Include="SceneFile\ResultScene.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="ソースファイル">
@@ -199,5 +201,65 @@
   </ItemGroup>
   <ItemGroup>
     <Text Include="Log.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="Resource\Images\Timer\Colon.png" />
+    <Image Include="Resource\Images\Timer\Num.png" />
+    <Image Include="Resource\Images\Timer\Timer01.png" />
+    <Image Include="Resource\Images\Timer\Timer.png" />
+    <Image Include="Resource\Images\Timer\Timer03.png" />
+    <Image Include="Resource\Images\Skill\battack_active.png" />
+    <Image Include="Resource\Images\Skill\battack_active_d.png" />
+    <Image Include="Resource\Images\Skill\battack_close.png" />
+    <Image Include="Resource\Images\Skill\battack_close_d.png" />
+    <Image Include="Resource\Images\Skill\battack_possible.png" />
+    <Image Include="Resource\Images\Skill\battack_possible_d.png" />
+    <Image Include="Resource\Images\Skill\bslowdown_active.png" />
+    <Image Include="Resource\Images\Skill\bslowdown_active_d.png" />
+    <Image Include="Resource\Images\Skill\bslowdown_close.png" />
+    <Image Include="Resource\Images\Skill\bslowdown_close_d.png" />
+    <Image Include="Resource\Images\Skill\bslowdown_possible.png" />
+    <Image Include="Resource\Images\Skill\bslowdown_possible_d.png" />
+    <Image Include="Resource\Images\Skill\explosion1.png" />
+    <Image Include="Resource\Images\Skill\spiderweb.png" />
+    <Image Include="Resource\Images\Background\Brick.png" />
+    <Image Include="Resource\Images\Background\Brick2.png" />
+    <Image Include="Resource\Images\Background\Brick3.png" />
+    <Image Include="Resource\Images\Background\Moon.png" />
+    <Image Include="Resource\Images\Background\Moon2.png" />
+    <Image Include="Resource\Images\Background\Moon3.png" />
+    <Image Include="Resource\Images\Background\Sun2.png" />
+    <Image Include="Resource\Images\Barrier\Barrier.png" />
+    <Image Include="Resource\Images\Barrier\BarrierDamage.png" />
+    <Image Include="Resource\Images\characters\Cursor\cursor.png" />
+    <Image Include="Resource\Images\characters\enemy\Burst.png" />
+    <Image Include="Resource\Images\characters\enemy\square.png" />
+    <Image Include="Resource\Images\characters\enemy\square_death.png" />
+    <Image Include="Resource\Images\characters\enemy\squarea1.png" />
+    <Image Include="Resource\Images\Coin\Coin01.png" />
+    <Image Include="Resource\Images\Coin\Coin02.png" />
+    <Image Include="Resource\Images\Coin\Coin03.png" />
+    <Image Include="Resource\Images\Coin\Effect.png" />
+    <Image Include="Resource\Images\Coin\Wallet.png" />
+    <Image Include="Resource\Images\Pause\Button\ArrowButton.png" />
+    <Image Include="Resource\Images\Pause\Button\LeftButton.png" />
+    <Image Include="Resource\Images\Pause\Button\NoButton.png" />
+    <Image Include="Resource\Images\Pause\Button\RightButton.png" />
+    <Image Include="Resource\Images\Pause\Button\TitleButton.png" />
+    <Image Include="Resource\Images\Pause\Button\YesButton.png" />
+    <Image Include="Resource\Images\Pause\Text\HowToPlay.png" />
+    <Image Include="Resource\Images\Pause\Text\Text.png" />
+    <Image Include="Resource\Images\Pause\HelpImage.png" />
+    <Image Include="Resource\Images\Pause\PauseButton.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Media Include="Resource\Sounds\Click\enemy_b.mp3" />
+    <Media Include="Resource\Sounds\Click\hitenemy_b.mp3" />
+    <Media Include="Resource\Sounds\Click\hitenemy_c.mp3" />
+    <Media Include="Resource\Sounds\Click\mouse.mp3" />
+    <Media Include="Resource\Sounds\Click\skill.mp3" />
+    <Media Include="Resource\Sounds\Coin\getcoin.mp3" />
+    <Media Include="Resource\Sounds\Skill\kumonosu.mp3" />
+    <Media Include="Resource\Sounds\Skill\bakuhatu.mp3" />
   </ItemGroup>
 </Project>
