--- a/KatiKatiClick/KatiKatiClick.vcxproj
+++ b/KatiKatiClick/KatiKatiClick.vcxproj
@@ -176,6 +176,7 @@
     <ClCompile Include="ObjectFile\EnemyFile\SplitEnemy.cpp" />
     <ClCompile Include="ObjectFile\PauseFile\ArrowButtonFile\RightButton.cpp" />
     <ClCompile Include="SceneFile\EndScene.cpp" />
+    <ClCompile Include="SceneFile\ResultScene.cpp" />
     <ClCompile Include="SceneFile\TitleScene.cpp" />
     <ClCompile Include="ObjectFile\PauseFile\TitleButtonFile\TitleButton.cpp" />
     <ClCompile Include="UtilityFile\MouseInput.cpp" />
@@ -215,6 +216,7 @@
     <ClInclude Include="ObjectFile\EnemyFile\SplitEnemy.h" />
     <ClInclude Include="ObjectFile\PauseFile\ArrowButtonFile\RightButton.h" />
     <ClInclude Include="SceneFile\EndScene.h" />
+    <ClInclude Include="SceneFile\ResultScene.h" />
     <ClInclude Include="SceneFile\TitleScene.h" />
     <ClInclude Include="ObjectFile\PauseFile\TitleButtonFile\TitleButton.h" />
     <ClInclude Include="UtilityFile\Define.h" />
@@ -239,6 +241,68 @@
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="IconFile\Icon.rc" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="Resource\Images\Background\Brick.png" />
+    <Image Include="Resource\Images\Background\Brick2.png" />
+    <Image Include="Resource\Images\Background\Brick3.png" />
+    <Image Include="Resource\Images\Background\Moon.png" />
+    <Image Include="Resource\Images\Background\Moon2.png" />
+    <Image Include="Resource\Images\Background\Moon3.png" />
+    <Image Include="Resource\Images\Background\Sun2.png" />
+    <Image Include="Resource\Images\Barrier\Barrier.png" />
+    <Image Include="Resource\Images\Barrier\BarrierDamage.png" />
+    <Image Include="Resource\Images\characters\Cursor\cursor.png" />
+    <Image Include="Resource\Images\characters\enemy\Burst.png" />
+    <Image Include="Resource\Images\characters\enemy\square.png" />
+    <Image Include="Resource\Images\characters\enemy\squarea1.png" />
+    <Image Include="Resource\Images\characters\enemy\square_death.png" />
+    <Image Include="Resource\Images\Coin\Coin01.png" />
+    <Image Include="Resource\Images\Coin\Coin02.png" />
+    <Image Include="Resource\Images\Coin\Coin03.png" />
+    <Image Include="Resource\Images\Coin\Effect.png" />
+    <Image Include="Resource\Images\Coin\Wallet.png" />
+    <Image Include="Resource\Images\Pause\Button\ArrowButton.png" />
+    <Image Include="Resource\Images\Pause\Button\LeftButton.png" />
+    <Image Include="Resource\Images\Pause\Button\NoButton.png" />
+    <Image Include="Resource\Images\Pause\Button\RightButton.png" />
+    <Image Include="Resource\Images\Pause\Button\TitleButton.png" />
+    <Image Include="Resource\Images\Pause\Button\YesButton.png" />
+    <Image Include="Resource\Images\Pause\HelpImage.png" />
+    <Image Include="Resource\Images\Pause\PauseButton.png" />
+    <Image Include="Resource\Images\Pause\Text\HowToPlay.png" />
+    <Image Include="Resource\Images\Pause\Text\Text.png" />
+    <Image Include="Resource\Images\Skill\battack_active.png" />
+    <Image Include="Resource\Images\Skill\battack_active_d.png" />
+    <Image Include="Resource\Images\Skill\battack_close.png" />
+    <Image Include="Resource\Images\Skill\battack_close_d.png" />
+    <Image Include="Resource\Images\Skill\battack_possible.png" />
+    <Image Include="Resource\Images\Skill\battack_possible_d.png" />
+    <Image Include="Resource\Images\Skill\bslowdown_active.png" />
+    <Image Include="Resource\Images\Skill\bslowdown_active_d.png" />
+    <Image Include="Resource\Images\Skill\bslowdown_close.png" />
+    <Image Include="Resource\Images\Skill\bslowdown_close_d.png" />
+    <Image Include="Resource\Images\Skill\bslowdown_possible.png" />
+    <Image Include="Resource\Images\Skill\bslowdown_possible_d.png" />
+    <Image Include="Resource\Images\Skill\explosion1.png" />
+    <Image Include="Resource\Images\Skill\spiderweb.png" />
+    <Image Include="Resource\Images\Timer\Colon.png" />
+    <Image Include="Resource\Images\Timer\Num.png" />
+    <Image Include="Resource\Images\Timer\Timer.png" />
+    <Image Include="Resource\Images\Timer\Timer01.png" />
+    <Image Include="Resource\Images\Timer\Timer03.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Media Include="Resource\Sounds\GameMain\BGM\bgm1.mp3" />
+    <Media Include="Resource\Sounds\GameMain\BGM\bgm2.mp3" />
+    <Media Include="Resource\Sounds\GameMain\Click\enemy_b.mp3" />
+    <Media Include="Resource\Sounds\GameMain\Click\hitenemy_b.mp3" />
+    <Media Include="Resource\Sounds\GameMain\Click\hitenemy_c.mp3" />
+    <Media Include="Resource\Sounds\GameMain\Click\mouse.mp3" />
+    <Media Include="Resource\Sounds\GameMain\Click\skill.mp3" />
+    <Media Include="Resource\Sounds\GameMain\Coin\getcoin.mp3" />
+    <Media Include="Resource\Sounds\GameMain\Skill\bakuhatu.mp3" />
+    <Media Include="Resource\Sounds\GameMain\Skill\kumonosu.mp3" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
