--- a/KatiKatiClick/KatiKatiClick.vcxproj
+++ b/KatiKatiClick/KatiKatiClick.vcxproj
@@ -174,6 +174,7 @@
     <ClCompile Include="ObjectFile\EnemyFile\SplitEnemy.cpp" />
     <ClCompile Include="ObjectFile\PauseFile\ArrowButtonFile\RightButton.cpp" />
     <ClCompile Include="ObjectFile\PauseFile\PauseBase.cpp" />
+    <ClCompile Include="OpeningFile\OpeningAnim.cpp" />
     <ClCompile Include="SceneFile\EndScene.cpp" />
     <ClCompile Include="SceneFile\ResultScene.cpp" />
     <ClCompile Include="SceneFile\TitleScene.cpp" />
@@ -213,6 +214,7 @@
     <ClInclude Include="ObjectFile\EnemyFile\SplitEnemy.h" />
     <ClInclude Include="ObjectFile\PauseFile\ArrowButtonFile\RightButton.h" />
     <ClInclude Include="ObjectFile\PauseFile\PauseBase.h" />
+    <ClInclude Include="OpeningFile\OpeningAnim.h" />
     <ClInclude Include="SceneFile\EndScene.h" />
     <ClInclude Include="SceneFile\ResultScene.h" />
     <ClInclude Include="SceneFile\TitleScene.h" />
